# the_art_of_developing_in_modern_CPP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
red_belt/1_week/: DequeBasedOnTwoVectors.cpp  LOG.cpp  print_values.cpp  table.cpp  uniq_id.cpp
red_belt/1_week/Comparator_Generator/: airline_ticket.h  sort_by.cpp
red_belt/1_week/UPDATE_FIELD/: airline_ticket.h  update_field.cpp
test_runner/: test_runner.h
white_belt/1_week/: binary_numbers.cpp  greatest_common_divisor.cpp
white_belt/1_week/train_exercise/: calc_cost_product.cpp  division_a_b.cpp  even_numbers.cpp  minStr.cpp  quadratic_equation.cpp  second_occurence.cpp  sum_a_b.cpp
white_belt/2_week/function/: selection_palindromes.cpp  sequence_reversal.cpp
white_belt/2_week/function/train_exercise/: factorial.cpp  maximizer.cpp  palindrome.cpp  sequence_reversal_2.cpp
white_belt/2_week/map/: bus_stops_1.cpp  bus_stops_2.cpp
white_belt/2_week/map/train_exercise/: anagrams.cpp  directory_capitals.cpp
white_belt/2_week/set/: bus_stops_3.cpp  synonyms.cpp
white_belt/2_week/set/train_exercise/: number_unique_rows.cpp  set_map_values.cpp
white_belt/2_week/train_exercise/: average_temperature.cpp  maximizer.cpp  move_strings.cpp
white_belt/2_week/vector/: monthly_affairs.cpp  queueing.cpp
white_belt/3_week/algorithms/: case_insensitive_sorting.cpp  sorting_integers_modulo.cpp
white_belt/3_week/constructors/: Initialization_methods.cpp  first_and_last_names_3.cpp
white_belt/3_week/constructors/train_exercise/: string.cpp
white_belt/3_week/structures_and_classes/: first_and_last_names_1.cpp  first_and_last_names_2.cpp
white_belt/3_week/structures_and_classes/train_exercise/: sorted_strings.cpp
white_belt/4_week/operator_overloading/01/: rational_interface.cpp
white_belt/4_week/operator_overloading/02/: rational_eq_add_sub.cpp
white_belt/4_week/operator_overloading/03/: rational_mult_div.cpp
white_belt/4_week/operator_overloading/04/: rational_io.cpp
white_belt/4_week/operator_overloading/05/: rational_map.cpp
white_belt/4_week/structures_and_classes/: accurateOutput.cpp  filestreamPart1.cpp  filestreamPart2.cpp  listStudents.cpp  readAndOutTable.cpp  reversFunction.cpp  reversFunctionWithOthersOperat.cpp  struct_LectureTitle.cpp
white_belt/4_week/throw/: Calculator_of_ordinary_fractions.cpp  EnsureEqual.cpp  TimeServer.cpp  rational_throw.cpp
white_belt/5_week/: solution.cpp
yellow_belt/1_week/Integer_types/: average_temperature_2.cpp  block_weight.cpp
yellow_belt/1_week/temlate_func/: GetRefStrict.cpp  sqrt_all.cpp
yellow_belt/1_week/test_white_belt/: Matrix.cpp
yellow_belt/1_week/tuples_and_pairs/: task_tracker.cpp
yellow_belt/2_week/: decom_bus_stops_1.cpp  test_equation.cpp  test_palindrome.cpp  test_rational.cpp
yellow_belt/3_week/: sum_reverse_sort.h
yellow_belt/3_week/Rectangle/: Rectangle.cpp  Rectangle.h  main.cpp
yellow_belt/3_week/decom_bus_stops_2/: bus_manager.cpp  bus_manager.h  main.cpp  query.cpp  query.h  responses.cpp  responses.h
yellow_belt/3_week/phone_number/: main.cpp  phone_number.cpp  phone_number.h
yellow_belt/3_week/sum_reverse_sort/: sum_reverse_sort.cpp
yellow_belt/4_week/: MergeSortP1.cpp  MergeSortP2.cpp  Parser_from_author_course.cpp  PrintVectorPart.cpp  SplitIntoWords.cpp  build_expression.cpp  build_expression_without_redundant_brackets.cpp  delete_dupl.cpp  figures.cpp  find_nearest_element.cpp  find_starts_with_char.cpp  find_starts_with_string.cpp  part_set.cpp  peer2peerN1.cpp  print_permutations.cpp
yellow_belt/5_week/: inheritance.cpp  notifiers.cpp
yellow_belt/6_week/: CMakeLists.txt  TComparison.h  condition_parser.cpp  condition_parser.h  condition_parser_test.cpp  database.cpp  database.h  date.cpp  date.h  main.cpp  node.cpp  node.h  test_runner.cpp  test_runner.h  token.cpp  token.h
yellow_belt/test_white_belt/: Matrix.cpp
yellow_belt/tuples_and_pairs/: base_regions.cpp
