cmake_minimum_required(VERSION 3.17)
project(CPP_YANDEX)

set(CMAKE_CXX_STANDARD 17)

add_executable(CPP_YANDEX
#        main.cpp
#        white_belt/1_week/train_exercise/even_numbers.cpp
#        white_belt/1_week/train_exercise/second_occurence.cpp
#        white_belt/1_week/greatest_common_divisor.cpp
#        white_belt/1_week/binary_numbers.cpp
#        white_belt/2_week/train_exercise/factorial.cpp
#        white_belt/2_week/train_exercise/palindrome.cpp
#        white_belt/2_week/train_exercise/selection_palindromes.cpp
#        white_belt/2_week/train_exercise/maximizer.cpp
#        white_belt/2_week/train_exercise/move_strings.cpp
#        white_belt/2_week/train_exercise/sequence_reversal.cpp
#        white_belt/2_week/train_exercise/sequence_reversal_2.cpp
#        white_belt/2_week/train_exercise/average_temperature.cpp
#        white_belt/2_week/queueing.cpp
#        white_belt/2_week/monthly_affairs.cpp
#        white_belt/2_week/map/train_exercise/anagrams.cpp
#        white_belt/2_week/map/train_exercise/directory_capitals.cpp
#        white_belt/2_week/map/bus_stops_1.cpp
#        white_belt/2_week/map/bus_stops_2.cpp
#        white_belt/2_week/set/train_exercise/number_unique_rows.cpp
#        white_belt/2_week/set/train_exercise/set_map_values.cpp
#        white_belt/2_week/set/synonyms.cpp
#        white_belt/2_week/set/bus_stops_3.cpp
#        white_belt/3_week/algorithms/sorting_integers_modulo.cpp
#        white_belt/3_week/algorithms/case_insensitive_sorting.cpp
#        white_belt/3_week/structures_and_classes/train_exercise/sorted_strings.cpp
#        white_belt/3_week/structures_and_classes/first_and_last_names_1.cpp
#        white_belt/3_week/structures_and_classes/first_and_last_names_2.cpp
#        white_belt/3_week/constructors/train_exercise/string.cpp
#        white_belt/3_week/constructors/first_and_last_names_3.cpp
#        white_belt/3_week/constructors/Initialization_methods.cpp
        white_belt/4_week/structures_and_classes/struct_LectureTitle.cpp)

add_executable(reversFunction white_belt/4_week/structures_and_classes/reversFunction.cpp)
add_executable(reversFunctionWithOthersOperat white_belt/4_week/structures_and_classes/reversFunctionWithOthersOperat.cpp)
add_executable(filestreamPart1 white_belt/4_week/structures_and_classes/filestreamPart1.cpp)
add_executable(filestreamPart2 white_belt/4_week/structures_and_classes/filestreamPart2.cpp)
add_executable(AccurateOutput white_belt/4_week/structures_and_classes/accurateOutput.cpp)
add_executable(readAndOutTable white_belt/4_week/structures_and_classes/readAndOutTable.cpp)
